BAH-4354 | Fix left margin alignment for Conditions and Diagnoses

--- a/apps/clinical/src/components/forms/conditionsAndDiagnoses/styles/SelectedDiagnosisItem.module.scss
+++ b/apps/clinical/src/components/forms/conditionsAndDiagnoses/styles/SelectedDiagnosisItem.module.scss
@@ -5,9 +5,10 @@
 
 .selectedDiagnosisTitle {
   @include type-style("heading-compact-01");
+  margin: 0;
+  justify-self: start;
   display: flex !important;
   flex-direction: column !important;
-  align-self: center;
 }
 
 .selectedDiagnosisCertainty {
